tests/should_fail/bug/1519.stderr
error: Could not generate a term for RA::le
  --> 1519.rs:20:5
   |
20 |     fn le(self, other: Self) -> bool;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: The trait function is not implemented here
  --> 1519.rs:26:1
   |
26 | / impl<T, U> RA for (T, U)
27 | | where
28 | |     T: RA,
29 | |     U: RA,
   | |__________^

error: aborting due to 1 previous error

